# SakunaGraPH

./: .env.compose.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  NDRRMC_VER3_10.py  NDRRMC_VER3_11.py  README.md  docker-compose.yml  package-lock.json  requirements.txt
sakunagraph_etl/: .dockerignore  .gitignore  README.md  constraints.txt  docker-compose.yml  pyproject.toml  requirements-cloud.txt  requirements-core.txt  requirements-document.txt
sakunagraph_etl/deploy/: README.md
sakunagraph_etl/deploy/adr/: 0001-stage6-artifact-boundary.md  0002-stage7-orchestration.md
sakunagraph_etl/deploy/docker/: Dockerfile.core  Dockerfile.documents
sakunagraph_etl/deploy/observability/: grafana-dashboard.json  prometheus-alerts.yml
sakunagraph_etl/deploy/runbooks/: cloud-and-onprem-recovery.md  graphdb-disaster-recovery.md  retention-and-security.md  workflow-operations.md
sakunagraph_etl/deploy/systemd/: sakunagraph-etl-dromic.timer  sakunagraph-etl-emdat.timer  sakunagraph-etl-integration.timer  sakunagraph-etl-ndrrmc.timer  sakunagraph-etl-psgc.timer  sakunagraph-etl@.service
sakunagraph_etl/deploy/terraform/: README.md  compute.tf  observability.tf  outputs.tf  storage.tf  variables.tf  versions.tf  (+1 more)
sakunagraph_etl/docs/: stage0-baseline.md  stage8-data-quality.md
sakunagraph_etl/tests/: __init__.py  baselines.json  test_check_fails.py  test_config.py  test_emdat_stage3.py  test_impact.py  test_iris.py  test_normalization.py  test_package_shell.py  test_service_interfaces.py  test_stage0_baselines.py  test_stage4_sources.py  test_stage5_services.py  test_stage6_artifacts.py  test_stage7_orchestration.py  test_stage7_recovery.py  test_stage8_quality.py  test_standalone_layout.py  test_storage_and_manifests.py
(+557 files in other folders)
